# idea-fastival

./: .gitignore  README.md  pyproject.toml  다시하는 깃허브 코드 C언어 예시 - 헤더.h  다시하는 깃허브 코드 C언어 예시.c  안녕!
src/: config.py  main.py
src/models/: schemas.py
src/services/: backend_client.py  memory_manager.py  schedule_generator.py
